fix : view list contract